2013-09-12  Kazuyuki Shudo  <shudo@computer.org>

	* lib/{servlet-api-*,jetty-*}.jar
	Jetty was updated from 9.0.4 to 9.0.5.

2013-08-14  Kazuyuki Shudo  <shudo@computer.org>

	* lib/{servlet-api-*,jetty-*}.jar
	Jetty was updated from 9.0.3 to 9.0.4.

	* lib/je-*.jar, txt/LICENSE.je-*
	Berkeley DB Java Edition was updated from 5.0.73 to 5.0.84.

	* build.xml
	Removes Git-related files when a target "distclean" invoked.

2013-06-12  Kazuyuki Shudo  <shudo@computer.org>

	* lib/{servlet-api-*,jetty-*}.jar
	Jetty was updated from 8.1.7 to 9.0.3.

	* lib/je-*.jar, txt/LICENSE.je-*
	Berkeley DB Java Edition was updated from 5.0.58 to 5.0.73.

2012-11-15  Kazuyuki Shudo  <shudo@computer.org>

	* src/ow/tool/{dhtshell,mcastshell,memcached}/Main.java
	Main classes do not implement Interruptible.

2012-11-07  Kazuyuki Shudo  <shudo@computer.org>

	* src/ow/util/Expiring{Set,Map}.java
	Instantiates only a thread for each set/map at most.

	* src/ow/{tool/emulator/{EmulatorContext,action/InvocationTask},util/concurrent/*}.java
	A thread pool was moved to SingletonThreadPoolExecutors.

	* src/ow/routing/impl/*RoutingDriverProvider.java
	AbstractRoutingDriverProvider class was removed.

2012-10-29  Kazuyuki Shudo  <shudo@computer.org>

	* 0.10.4 released.

	* lib/{servlet-api-*,jetty-*}.jar
	Jetty was updated from 8.1.6 to 8.1.7.

	* src/ow/routing/impl/{Iterative,Recursive}RoutingDriver.java
	RoutingDrivers do not call RoutingAlgorithm#touch()
	for a joining node in default.
	But, they call touch() when running Kademlia.
	The behavior can be configured by modifying
	<each algorithm>Configuration#insertJoiningNodeIntoRoutingTables().

	* src/ow/routing/impl/IterativeRoutingDriver.java
	NullPointerException with Java 7 was resolved.

2012-09-10  Kazuyuki Shudo  <shudo@computer.org>

	* build.xml
	Stop specifying target VM specification as 5.
	Because today's common JRE is Java 7
	and it cannot generate class files for Java 5.

	* lib/{servlet-api-*,jetty-*}.jar